fix: dark mode aligment to category-carousel-widget

--- a/blocks/product-highlights-widget/product-highlights-widget.css
+++ b/blocks/product-highlights-widget/product-highlights-widget.css
@@ -1,8 +1,5 @@
 .section.product-highlights-widget {
-    --product-highlights-widget-bg: var(
-        --Carousel-Widget-Product-Highlights-Background-Color,
-        var(--Background-Default-Tertiary, #001C35)
-    );
+    --product-highlights-widget-bg: var(--Background-Default-Secondary, #fff);
     --product-highlights-widget-content-width: min(100%, var(--Layout-Page-Width, 90rem));
     --product-highlights-widget-panel-padding: var(--Layout-Section-Margin-Horizontal-Padding, 4rem);
     --Card-Photo-Card-Width-S: clamp(220px, 26vw, 380px);
@@ -11,7 +8,16 @@
     --Card-Photo-Card-Image-Height-M: calc(var(--Card-Photo-Card-Width-M) * 0.562);
 
     padding-block: var(--Layout-Section-Vertical-Padding, 4rem);
-    color: var(--Text-Default-Primary, #fff);
+    color: var(--Text-Default-Primary, #001C35);
+
+    &.theme-dark {
+        --product-highlights-widget-bg: var(
+            --Carousel-Widget-Product-Highlights-Background-Color,
+            var(--Background-Default-Tertiary, #001C35)
+        );
+
+        color: var(--Text-Default-Primary, #fff);
+    }
 
     & .product-highlights-widget-panel {
         width: 100%;
